CMAKE_MINIMUM_REQUIRED(VERSION 3.22.1)
PROJECT(httpServer)

SET(CMAKE_CXX_STANDARD 11)      # 指定C++版本
SET(EXE_NAME httpServer.out)    # 指定可执行程序的名称
SET(OUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(EXECUTABLE_OUTPUT_PATH ${OUT_PATH})

ADD_SUBDIRECTORY(src)

# 使用file命令来创建文件夹
FILE(MAKE_DIRECTORY ${OUT_PATH})
